modules/web/js/tests/resources/parser/invalidSyntax/MainFuncWithoutName.bal
package samples.parser.invalidSyntax;

// Following line is invalid.
function {
	int b;
	reply m;
}
